--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
-<title>Wayvine Company</title>
+<title>Wayvine Company</title><center>
 <fieldset>
-  <legend>Wayvine Co.</legend>
+  <legend><h2>Wayvine Co.</h2></legend>
   <h2>Welcome to Wayvine.</h2>
 </fieldset>
