--- a/index.html
+++ b/index.html
@@ -1,5 +1,7 @@
 <title>Wayvine Company</title><center>
 <fieldset>
-  <legend><h2>Wayvine Co.</h2></legend>
-  <h2>Welcome to Wayvine.</h2>
+  <legend><h1>Wayvine Co.</h1></legend>
+  <h2>
+    <a href="products.html">Products</a> | <a href="about.html">About</a> | <a href="">Something</a>
+  </h2>
 </fieldset>
