--- a/index.html
+++ b/index.html
@@ -2,6 +2,6 @@
 <fieldset>
   <legend><h1>Wayvine Co.</h1></legend>
   <h2>
-    <a href="products.html">Products</a> | <a href="about.html">About</a> | <a href="">Something</a>
+    <a href="products.html">Products</a> | <a href="about.html">About</a> | <a href="employmentquiz.html">Become an employee</a>
   </h2>
 </fieldset>
