--- a/products.html
+++ b/products.html
@@ -1,1 +1,7 @@
-
+<title>Products | Wayvine Company</title><center>
+<fieldset>
+  <legend><h1>Products | Wayvine Co.</h1></legend>
+  <h2>
+    <a href="index.html">Home</a> | <a href="about.html">About</a> | <a href="employmentquiz.html">Become an employee</a>
+  </h2>
+</fieldset>
