--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <title>Wayvine Company</title><center>
-<fieldset>
+<fieldset><center>
   <legend><h1>Wayvine Co.</h1></legend>
   <h2>
     <a href="products.html">Products</a> | <a href="about.html">About</a> | <a href="employmentquiz.html">Become an employee</a>
