--- a/index.html
+++ b/index.html
@@ -4,4 +4,5 @@
   <h2>
     <a href="products.html">Products</a> | <a href="about.html">About</a> | <a href="employmentquiz.html">Become an employee</a>
   </h2>
+  <input type="color"></input>
 </fieldset>
