--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
-<title>Wayvine Company</title><center>
+<title>Geexus Company</title><center>
 <fieldset><center>
-  <legend><h1>Wayvine Co.</h1></legend>
+  <h1><legend>Geexus Company</legend></h1>
   <h2>
     <a href="products.html">Products</a> | <a href="about.html">About</a> | <a href="employmentquiz.html">Become an employee</a>
   </h2>
