--- a/products.html
+++ b/products.html
@@ -1,6 +1,6 @@
-<title>Products | Wayvine Company</title><center>
+<title>Products | Geexus Company</title><center>
 <fieldset>
-  <legend><h1>Products | Wayvine Co.</h1></legend>
+  <legend><h1>Products | Geexus Company</h1></legend>
   <h2>
     <a href="index.html">Home</a> | <a href="about.html">About</a> | <a href="employmentquiz.html">Become an employee</a>
   </h2>
